# XORList

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: xor_list.h
include/xor_list/: xor_list.h
tests/: CMakeLists.txt  iterator.cpp  list.cpp  performance_list_sort.cpp
